updated portfolio with links for Project 1 of UTA Bootcamp

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
     <section>
         <h2 class="title">Work:</h2>
             <p>Here are some of the recent works I have done:</p>
+            <p class="first-project">You can click the link for the <b>deployed website</b> for my first project <a href="https://devonmcfarlen.github.io/DallasMavericksPlayerStats/">here.</a></p>
+            <p class="first-project">You can click the link for the <b>repository</b> of my first project <a href="https://github.com/DevonMcfarlen/DallasMavericksPlayerStats">here.</a></p>
     </section>
     
     <section>
-        <img id="first" src="./assets/images/strawberry.jpg" alt="strawberry image">
+        <img id="first" src="./assets/images/Screenshot 2023-10-12 at 2.44.03 PM.png" alt="My first project">
     </section>
 
     <section>
-        <img class="images" src="./assets/images/butterfly.jpg" alt="butterfly image">
+        <img class="images" src="./assets/images/Screenshot 2023-10-12 at 2.43.53 PM.png" alt="My first project">
         <img class="images" src="./assets/images/field.jpg" alt="field">
         <img class="images" src="./assets/images/flower.jpg" alt="flower">
     </section>
