--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 
     <section>
         <img class="images" src="./assets/images/Screenshot 2023-10-12 at 2.43.53 PM.png" alt="My first project">
+    </section>
+
+    <section>
+        <h3 class="second-project">You can click the link for the <b>deployed website</b> for my second project <a href="https://movie-time.dev.133700.xyz/">here.</h3></p>
+        <h3 class="second-project">You can click the link for the <b>repository</b> of my second project <a href="https://github.com/ashoener/movie-time">here.</h3></p>
+    </section>
+
+    <section>
         <img class="images" src="./assets/images/field.jpg" alt="field">
         <img class="images" src="./assets/images/flower.jpg" alt="flower">
     </section>
