--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </section>
 
     <section>
+        <img class="images" src="./assets/images/website image.png" alt="website">
         <img class="images" src="./assets/images/field.jpg" alt="field">
         <img class="images" src="./assets/images/flower.jpg" alt="flower">
     </section>
